--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Tu delft library
+title: Personal library
 email: lkdmc0310@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
  
